2008-05-03  Everaldo Canuto  <ecanuto@novell.com>

	* MenuAPI.cs: Check if mouse down comes from menu, we need it because
	sometimes we open a conext menu on mouse down of some controls and the mouse
	up is dispatched to menu and dont need to. It fix remaining issues of 
	#363711 and other problems related to menu mouse click events.

2008-05-02  Everaldo Canuto  <ecanuto@novell.com>

	* MonthCalendar.cs: Implemented "Go to today" context menu, also changed
	some var names to better fit changes, now we have month_menu and today_menu
	vars. Fixes bug #363711.

2008-05-02  Everaldo Canuto  <ecanuto@novell.com>

	* MonthCalendar.cs: Handle every right mouse click to open context menu,
	right now the default month menu but it will be change to have "Go to today"
	menu.

2008-05-02  Jonathan Pobst  <monkey@jpobst.com>

	* FileDialog.cs, MaskedTextBox.cs, OpenFileDialog.cs: corcompare.

2008-05-02  Everaldo Canuto  <ecanuto@novell.com>

	* ThemeWin32Classic.cs: Fix MonthCalendar arrows drawing.

2008-05-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ThemeVisualStyles.cs: Added support for TreeView.

2008-05-02  George Giolfan  <georgegiolfan@yahoo.com>

	* Theme.cs, ThemeWin32Classic.cs, TreeView.cs: Refactored:
	Moved TreeView.DrawNodePlusMinus to Theme.TreeViewDrawNodePlusMinus.

2008-05-02  Jonathan Pobst  <monkey@jpobst.com>

	* OpenFileDialog.cs: Implement 2.0 SP1 stuffs.

2008-05-02  Jonathan Pobst  <monkey@jpobst.com>

	* FileDialogCustomPlace.cs, FileDialogCustomPlacesCollection.cs:
	Implement 2.0 SP1 stuffs.

2008-05-02  Jonathan Pobst  <monkey@jpobst.com>

	* FileDialog.cs: Implement 2.0 SP1 stuffs.

2008-05-02  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs, ContainerControl.cs, DataGridView.cs, TextBoxBase.cs:
	Implement CanEnableIme property. (2.0 SP1)

2008-05-02  Jonathan Pobst  <monkey@jpobst.com>

	* BindingManagerBase.cs, PropertyManager.cs: Hide GetItemProperties
	from the 2.0 API.

2008-05-02  Jonathan Pobst  <monkey@jpobst.com>
