@@ -1,5 +1,10 @@
 2008-05-03  Everaldo Canuto  <ecanuto@novell.com>
 
+	* MenuAPI.cs: Enable implicit mnemonics for menus. Fixes remaining issues
+	of bug #367492.
+
+2008-05-03  Everaldo Canuto  <ecanuto@novell.com>
+
 	* MenuAPI.cs: Check if mouse down comes from menu, we need it because
 	sometimes we open a conext menu on mouse down of some controls and the mouse
 	up is dispatched to menu and dont need to. It fix remaining issues of 
